fixed menu button alignment

--- a/src/Components/MenuButton/menuButton.css
+++ b/src/Components/MenuButton/menuButton.css
@@ -4,6 +4,7 @@
   background: none;
   position: absolute;
   top: 0;
+  left: 0;
 }
 
 .menu-button-container button {
