--- a/src/Components/OddsCalculator/OddsCalculator.css
+++ b/src/Components/OddsCalculator/OddsCalculator.css
@@ -1,5 +1,3 @@
 .Calculator {
-  text-align: center;
   max-width: 690px;
-  margin: auto;
 }
